--- a/tracing/tracing/value/histogram_test.html
+++ b/tracing/tracing/value/histogram_test.html
@@ -66,7 +66,6 @@ tr.b.unittest.testSuite(function() {
     const hist = tr.v.Histogram.create('', unitlessNumber, [], {
       binBoundaries: tr.v.HistogramBinBoundaries.SINGULAR,
       description: 'foo',
-      shortName: 'shorty',
       diagnostics: {
         generic: new tr.v.d.GenericSet(['occam']),
       },
@@ -76,7 +75,6 @@ tr.b.unittest.testSuite(function() {
       }
     });
     assert.strictEqual(hist.description, 'foo');
-    assert.strictEqual(hist.shortName, 'shorty');
     assert.strictEqual(tr.b.getOnlyElement(
         hist.diagnostics.get('generic')), 'occam');
     assert.isFalse(hist.summaryOptions.get('count'));
@@ -224,26 +222,26 @@ tr.b.unittest.testSuite(function() {
     // You can change these numbers, but when you do, please explain in your CL
     // description why they changed.
     let dict = hist.asDict();
-    assert.strictEqual(107, JSON.stringify(dict).length);
+    assert.strictEqual(61, JSON.stringify(dict).length);
     assert.isUndefined(dict.allBins);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
 
     hist.addSample(100);
     dict = hist.asDict();
-    assert.strictEqual(198, JSON.stringify(dict).length);
+    assert.strictEqual(152, JSON.stringify(dict).length);
     assert.isUndefined(dict.allBins.length);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
 
     hist.addSample(100);
     dict = hist.asDict();
     // SAMPLE_VALUES grew by "100,"
-    assert.strictEqual(202, JSON.stringify(dict).length);
+    assert.strictEqual(156, JSON.stringify(dict).length);
     assert.isUndefined(dict.allBins.length);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
 
     hist.addSample(271, {foo: new tr.v.d.GenericSet(['bar'])});
     dict = hist.asDict();
-    assert.strictEqual(268, JSON.stringify(dict).length);
+    assert.strictEqual(222, JSON.stringify(dict).length);
     assert.isUndefined(dict.allBins.length);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
 
@@ -253,7 +251,7 @@ tr.b.unittest.testSuite(function() {
       hist.addSample(10 * i);
     }
     dict = hist.asDict();
-    assert.strictEqual(697, JSON.stringify(hist.asDict()).length);
+    assert.strictEqual(651, JSON.stringify(hist.asDict()).length);
     assert.lengthOf(dict.allBins, 12);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
 
@@ -263,7 +261,7 @@ tr.b.unittest.testSuite(function() {
     // retained.
     hist.maxNumSampleValues = 10;
     dict = hist.asDict();
-    assert.strictEqual(389, JSON.stringify(dict).length);
+    assert.strictEqual(343, JSON.stringify(dict).length);
     assert.lengthOf(dict.allBins, 12);
     assert.deepEqual(dict, tr.v.Histogram.fromDict(dict).asDict());
   });
@@ -719,6 +717,21 @@ tr.b.unittest.testSuite(function() {
     assert.strictEqual(2, hist.getApproximatePercentile(0.7));
     assert.strictEqual(3, hist.getApproximatePercentile(0.9));
     assert.strictEqual(4, hist.getApproximatePercentile(1));
+  });
+
+  test('singularBin_with_multiBin', function() {
+    const multiBin = new tr.v.Histogram('', unitlessNumber);
+    const singleBin = new tr.v.Histogram('', unitlessNumber,
+        tr.v.HistogramBinBoundaries.SINGULAR);
+    multiBin.addSample(1);
+    singleBin.addSample(3);
+    assert.strictEqual(1, multiBin.average);
+    assert.strictEqual(3, singleBin.average);
+    multiBin.addHistogram(singleBin);
+    assert.strictEqual(2, multiBin.average);
+    multiBin.addSample(1);
+    singleBin.addHistogram(multiBin);
+    assert.strictEqual(2, singleBin.average);
   });
 
   test('mergeSummaryOptions', function() {
