--- a/tracing/tracing/value/chart_json_converter.html
+++ b/tracing/tracing/value/chart_json_converter.html
@@ -64,7 +64,8 @@ tr.exportTo('tr.v', function() {
               improvementDirection);
 
           const hist = histograms.createHistogram(
-              value.name, tr.b.Unit.byName[unitName + unitNameSuffix], [], {
+              value.name || name,
+              tr.b.Unit.byName[unitName + unitNameSuffix], [], {
                 binBoundaries: tr.v.HistogramBinBoundaries.SINGULAR,
                 description: value.description || '',
               });
@@ -113,7 +114,7 @@ tr.exportTo('tr.v', function() {
                 new tr.v.d.DateRange(charts.benchmarkStartMs));
           }
 
-          if (value.type === 'histogram') {
+          if (value.type === 'histogram' || value.buckets) {
             for (const bucket of value.buckets) {
               // Take the center of the bin. This coarse granularity can amplify
               // noise when a measurement moves from one bin to the next.
@@ -122,7 +123,7 @@ tr.exportTo('tr.v', function() {
                 hist.addSample(sample);
               }
             }
-          } else if (value.type === 'list_of_scalar_values') {
+          } else if (value.type === 'list_of_scalar_values' || value.values) {
             // |value.values| is undefined if the list_of_scalar_values is
             // empty.
             if (value.values) {
@@ -130,7 +131,7 @@ tr.exportTo('tr.v', function() {
                 hist.addSample(sample * conversionFactor);
               }
             }
-          } else if (value.type === 'scalar') {
+          } else if (value.type === 'scalar' || value.value !== undefined) {
             hist.addSample(value.value * conversionFactor);
           }
         }
