--- a/dashboard/dashboard/spa/index.html
+++ b/dashboard/dashboard/spa/index.html
@@ -15,6 +15,6 @@ found in the LICENSE file.
 <link rel="import" href="/tracing/base/base.html" data-suppress-import-order>
 <script src="/redux.min.js"></script>
 <link rel="import" href="/bower_components/polymer-redux/polymer-redux.html">
-<script src="/dashboard/spa/polymer-svg-template.js"></script>
+<script src="/polymer-svg-template.js"></script>
 <link rel="import" href="/dashboard/spa/chromeperf-app.html" data-suppress-import-order>
 <chromeperf-app state-path="chromeperfApp"></chromeperf-app>
