--- a/dashboard/dashboard/spa/alerts-section-test.html
+++ b/dashboard/dashboard/spa/alerts-section-test.html
@@ -20,32 +20,26 @@ found in the LICENSE file.
 'use strict';
 suite('alerts-section', function() {
   let originalFetch;
-  let existingBugBody;
-  let newBugBody;
   setup(() => {
     window.IS_DEBUG = true;
     originalFetch = window.fetch;
     window.fetch = async(url, options) => {
-      return {
-        async json() {
-          if (url === '/api/describe') {
-            return {};
-          }
-          if (url === '/api/new_bug') {
-            newBugBody = options.body;
-            return {bug_id: 57};
-          }
-          if (url === '/api/report/names') {
+      if (url === '/api/report/names') {
+        return {
+          async json() {
             return [{name: 'aaa', id: 42, modified: new Date()}];
           }
-          if (url === '/api/existing_bug') {
-            existingBugBody = options.body;
-            return {};
+        };
+      }
+      if (url === '/api/alerts/existing_bug') {
+        return {
+          async json() {
           }
-          if (url === '/api/sheriffs') {
-            return [];
-          }
-          if (url === '/api/alerts') {
+        };
+      }
+      if (url === '/api/alerts') {
+        return {
+          async json() {
             const improvements = Boolean(options.body.get('improvements'));
             const alerts = [];
             const measurements = ['mmm0', 'mmm1', 'mmm2'];
@@ -54,9 +48,18 @@ suite('alerts-section', function() {
               const revs = new tr.b.math.Range();
               revs.addValue(parseInt(1e6 * Math.random()));
               revs.addValue(parseInt(1e6 * Math.random()));
+              let bugId = undefined;
+              if (options.body.get('bug_id') !== '' && (Math.random() > 0.5)) {
+                if (Math.random() > 0.5) {
+                  bugId = -1;
+                } else {
+                  bugId = 123456;
+                }
+              }
               alerts.push({
                 bot: 'bot' + (i % 3),
                 bug_components: [],
+                bug_id: bugId,
                 bug_labels: [],
                 descriptor: {
                   bot: 'master:bot' + (i * 3),
@@ -83,35 +86,32 @@ suite('alerts-section', function() {
               anomalies: alerts,
             };
           }
-        }
-      };
+        };
+      }
     };
-
     localStorage.setItem('recentlyModifiedBugs', JSON.stringify([
       {id: 42, summary: 'bbb'},
     ]));
     fixture('test').dispatch(Redux.CHAIN(
-        Redux.UPDATE('', {
-          recentPerformanceBugs: [
-            {
-              id: '123456',
-              summary: 'bug 123456 summary',
-              revisionRange: tr.b.math.Range.fromExplicitRange(123, 456),
-            },
-            {
-              id: '234567',
-              summary: 'bug 234567 summary',
-              revisionRange: tr.b.math.Range.fromExplicitRange(234, 567),
-            },
-            {
-              id: '345678',
-              summary: 'bug 345678 summary',
-              revisionRange: tr.b.math.Range.fromExplicitRange(345, 678),
-            },
-          ],
-        }),
+        Redux.UPDATE('', {recentPerformanceBugs: [
+          {
+            id: '123456',
+            summary: 'bug 123456 summary',
+            revisionRange: tr.b.math.Range.fromExplicitRange(123, 456),
+          },
+          {
+            id: '234567',
+            summary: 'bug 234567 summary',
+            revisionRange: tr.b.math.Range.fromExplicitRange(234, 567),
+          },
+          {
+            id: '345678',
+            summary: 'bug 345678 summary',
+            revisionRange: tr.b.math.Range.fromExplicitRange(345, 678),
+          },
+        ]}),
         Redux.ENSURE('test'),
-        Redux.UPDATE('test', cp.AlertsSection.buildState({}))));
+        Redux.UPDATE('test', cp.AlertsControls.buildState({}))));
   });
   teardown(() => {
     window.fetch = originalFetch;
@@ -120,7 +120,6 @@ suite('alerts-section', function() {
 
   test('triageNew', async function() {
     const section = fixture('test');
-    await cp.afterRender();
     section.$.controls.dispatchEvent(new CustomEvent('sources', {
       detail: {sources: [
         {bug: 42},
@@ -136,6 +135,17 @@ suite('alerts-section', function() {
 
     const button = tr.ui.b.findDeepElementWithTextContent(section, /New Bug/);
     button.click();
+
+    let newBugBody;
+    window.fetch = async(url, options) => {
+      assert.strictEqual(url, '/api/new_bug');
+      newBugBody = options.body;
+      return {
+        async json() {
+          return {bug_id: 57};
+        }
+      };
+    };
 
     const submit = tr.ui.b.findDeepElementWithTextContent(section, /SUBMIT/i);
     submit.click();
@@ -158,7 +168,6 @@ suite('alerts-section', function() {
 
   test('triageExisting', async function() {
     const section = fixture('test');
-    await cp.afterRender();
     section.$.controls.dispatchEvent(new CustomEvent('sources', {
       detail: {sources: [
         {bug: 42},
@@ -179,6 +188,17 @@ suite('alerts-section', function() {
     section.dispatch(Redux.UPDATE('test.existingBug', {bugId: '123456'}));
     await cp.afterRender();
 
+    let existingBugBody;
+    window.fetch = async(url, options) => {
+      assert.strictEqual(url, '/api/alerts/existing_bug');
+      existingBugBody = options.body;
+      return {
+        async json() {
+          return {bug_id: 57};
+        }
+      };
+    };
+
     const menu = tr.ui.b.findDeepElementMatching(section, 'triage-existing');
     const submit = tr.ui.b.findDeepElementWithTextContent(menu, /SUBMIT/i);
     submit.click();
@@ -196,7 +216,6 @@ suite('alerts-section', function() {
 
   test('ignore', async function() {
     const section = fixture('test');
-    await cp.afterRender();
     section.$.controls.dispatchEvent(new CustomEvent('sources', {
       detail: {sources: [
         {bug: 42},
@@ -209,6 +228,17 @@ suite('alerts-section', function() {
     selectAll.click();
     let state = section.getState().test;
     assert.strictEqual(10, state.selectedAlertsCount);
+
+    let existingBugBody;
+    window.fetch = async(url, options) => {
+      assert.strictEqual(url, '/api/alerts/existing_bug');
+      existingBugBody = options.body;
+      return {
+        async json() {
+          return {bug_id: 57};
+        }
+      };
+    };
 
     const ignore = tr.ui.b.findDeepElementWithTextContent(section,
         /^\W*Ignore\W*$/i);
@@ -227,7 +257,6 @@ suite('alerts-section', function() {
 
   test('unassign', async function() {
     const section = fixture('test');
-    await cp.afterRender();
     section.$.controls.dispatchEvent(new CustomEvent('sources', {
       detail: {sources: [
         {bug: 42},
@@ -240,6 +269,17 @@ suite('alerts-section', function() {
     selectAll.click();
     let state = section.getState().test;
     assert.strictEqual(10, state.selectedAlertsCount);
+
+    let existingBugBody;
+    window.fetch = async(url, options) => {
+      assert.strictEqual(url, '/api/alerts/existing_bug');
+      existingBugBody = options.body;
+      return {
+        async json() {
+          return {bug_id: 57};
+        }
+      };
+    };
 
     const ignore = tr.ui.b.findDeepElementWithTextContent(section,
         /^\W*Unassign\W*$/i);
