--- a/dashboard/dashboard/spa/existing-bug-request.html
+++ b/dashboard/dashboard/spa/existing-bug-request.html
@@ -5,4 +5,6 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
-<script src="/dashboard/spa/team-filter.js"></script>
+<link rel="import" href="/dashboard/spa/request-base.html">
+
+<script src="/dashboard/spa/existing-bug-request.js"></script>
