--- a/dashboard/dashboard/spa/menu-input.html
+++ b/dashboard/dashboard/spa/menu-input.html
@@ -15,6 +15,7 @@ found in the LICENSE file.
   <template>
     <style>
       :host {
+        padding-top: 12px;
         display: block;
       }
 
@@ -35,10 +36,6 @@ found in the LICENSE file.
         padding-right: 8px;
         position: absolute;
         z-index: var(--layer-menu, 100);
-      }
-
-      #bottom {
-        display: flex;
       }
     </style>
 
@@ -65,7 +62,7 @@ found in the LICENSE file.
     <div id="menu" tabindex="0">
       <iron-collapse opened="[[isFocused]]">
         <slot name="top"></slot>
-        <div id="bottom">
+        <div>
           <slot name="left"></slot>
           <option-group
               state-path="[[statePath]]"
