--- a/dashboard/dashboard/spa/raised-button.html
+++ b/dashboard/dashboard/spa/raised-button.html
@@ -13,15 +13,14 @@ found in the LICENSE file.
         background-color: var(--primary-color-light, lightblue);
         background-position: center;
         border-radius: 24px;
-        border: 0px none hsl(231, 50%, 50%);
+        border: 0px none rgb(63, 81, 181);
         box-shadow: var(--elevation-1);
         color: var(--primary-color-dark, blue);
         cursor: pointer;
         display: flex;
-        height: var(--icon-size, 1em);
+        height: var(--icon-size, 24);
         justify-content: center;
         margin: 4px 8px;
-        outline: none;
         padding: 4px 8px;
         text-transform: uppercase;
         transition: background var(--transition-long, 1s);
@@ -36,6 +35,9 @@ found in the LICENSE file.
         color: var(--neutral-color-dark, grey);
         cursor: auto;
         pointer-events: none;
+      }
+      :host(:hover) {
+        background: var(--primary-color-light, lightgrey) radial-gradient(circle, transparent 1%, var(--primary-color-light, lightgrey) 1%) center/15000%;
       }
       :host(:active) {
         background-color: var(--primary-color-medium, dodgerblue);
