--- a/dashboard/dashboard/spa/request-base-test.html
+++ b/dashboard/dashboard/spa/request-base-test.html
@@ -23,20 +23,24 @@ suite('RequestBase', function() {
     window.getAuthorizationHeaders = originalAuthorizationHeaders;
   });
 
-  class TestRequest extends cp.RequestBase {
-    get url_() {
-      return '/url';
-    }
+  // HTML imports may not have loaded when suite() is called, but are loaded
+  // when tests are called.
+  function TestRequest(options) {
+    return new class TestRequest extends cp.RequestBase {
+      get url_() {
+        return '/url';
+      }
 
-    postProcess_(response) {
-      return response.map(x => x * x);
-    }
+      postProcess_(response) {
+        return response.map(x => x * x);
+      }
+    }(options);
   }
 
   test('getAuthorizationHeaders', async() => {
-    window.getAuthorizationHeaders = async() => {
-      return {Authorization: 'test Authorization'};
-    };
+    window.getAuthorizationHeaders = async() => [
+      ['Authorization', 'test Authorization'],
+    ];
     window.fetch = async(url, options) => {
       assert.strictEqual('test Authorization',
           options.headers.get('Authorization'));
