--- a/dashboard/dashboard/spa/test-suites-request.html
+++ b/dashboard/dashboard/spa/test-suites-request.html
@@ -5,3 +5,6 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
+<link rel="import" href="/dashboard/spa/request-base.html">
+
+<script src="/dashboard/spa/test-suites-request.js"></script>
