--- a/dashboard/dashboard/spa/triage-existing.html
+++ b/dashboard/dashboard/spa/triage-existing.html
@@ -42,7 +42,7 @@ found in the LICENSE file.
         margin-right: 16px;
       }
 
-      #table_container {
+      #table-container {
         max-height: 500px;
         overflow: auto;
         margin: 0;
@@ -104,7 +104,7 @@ found in the LICENSE file.
       </cp-switch>
     </div>
 
-    <div id="table_container">
+    <div id="table-container">
       <table>
         <thead>
           <tr>
@@ -119,7 +119,7 @@ found in the LICENSE file.
           <template is="dom-repeat" items="[[filterBugs_(recentPerformanceBugs, onlyIntersectingBugs, selectedRange)]]" as="bug" index-as="bugIndex">
             <tr>
               <td class="bug_id"
-                  on-click="onRecentPerformanceBugClick_"
+                  on-click="onRecentPerformanceBugTap_"
                   tabindex="0">
                 [[bug.id]]
               </td>
