--- a/dashboard/dashboard/spa/utils-test.html
+++ b/dashboard/dashboard/spa/utils-test.html
@@ -19,7 +19,7 @@ found in the LICENSE file.
 
 <script>
 'use strict';
-suite('utils', function() {
+suite('basic tests', function() {
   test('setImmutable', function() {
     assert.deepEqual({b: 'c'}, cp.setImmutable(
         {a: []}, '', {b: 'c'}));
@@ -195,14 +195,6 @@ suite('utils', function() {
 
   test('normalize', function() {
     assert.deepEqual({a: 1, b: 2}, cp.normalize(['a', 'b'], [1, 2]));
-  });
-
-  test('BatchIterator empty', async function() {
-    const batches = [];
-    for await (const batch of new cp.BatchIterator([])) {
-      batches.push(batch);
-    }
-    assert.lengthOf(batches, 0);
   });
 
   test('BatchIterator 1 Promise success', async function() {
