--- a/dashboard/dashboard/static/group_alerts.html
+++ b/dashboard/dashboard/static/group_alerts.html
@@ -23,21 +23,12 @@ tr.exportTo('d', function() {
    * @param {!Alert} b
    * @return {boolean}
    */
-  function shouldMerge(a, b, groupBugs) {
-    if (groupBugs && a.bug_id && b.bug_id && (a.bug_id === b.bug_id)) {
-      return true;
-    }
+  function shouldMerge(a, b) {
     if (!rangeIntersects(a.start_revision, a.end_revision,
         b.start_revision, b.end_revision)) {
       return false;
     }
-    if (groupBugs && (a.bug_id !== b.bug_id)) return false;
-    if (!a.relatedNames && !b.relatedNames) {
-      if (a.descriptor && b.descriptor) {
-        return a.descriptor.testSuite === b.descriptor.testSuite;
-      }
-      return a.testsuite === b.testsuite;
-    }
+    if (!a.relatedNames && !b.relatedNames) return a.testsuite === b.testsuite;
     return isRelated(a, b);
   }
 
@@ -74,11 +65,10 @@ tr.exportTo('d', function() {
    * @param {!Array.<!Alert>} alerts
    * @return {!Array.<!Array.<!Alert>>}
    */
-  function groupAlerts(alerts, groupBugs) {
+  function groupAlerts(alerts) {
     const groups = [];
     for (const alert of alerts) {
-      alert.measurementName = alert.descriptor ? alert.descriptor.measurement :
-        alert.test.split('/')[0];
+      alert.measurementName = alert.test.split('/')[0];
       if (d.MEMORY_PROCESS_RELATED_NAMES.has(alert.measurementName)) {
         alert.relatedNames = d.MEMORY_PROCESS_RELATED_NAMES.get(
             alert.measurementName);
@@ -95,7 +85,7 @@ tr.exportTo('d', function() {
       for (const group of groups) {
         let doMerge = true;
         for (const other of group) {
-          const should = shouldMerge(alert, other, groupBugs);
+          const should = shouldMerge(alert, other);
           if (!should) {
             doMerge = false;
             break;
